Add convenience method for enums in configurations

--- a/test/framework/config/test.config
+++ b/test/framework/config/test.config
@@ -11,6 +11,7 @@ bool_zero: 0
 bool_false: false
 bool_no: no
 bool_off: off
+enum: value
 default_val: default
 
 [section]
@@ -26,4 +27,5 @@ bool_zero: 0
 bool_false: false
 bool_no: no
 bool_off: off
+enum: value
 interpolated: %(default_val)s/%(name)s/%(bool)s
