Add info to default.config

--- a/config/default.config
+++ b/config/default.config
@@ -1,4 +1,6 @@
 [DEFAULT]
+# Variables for interpolation in multiple modules
+
 # Name of Robot
 robot_name: Leolani
 
@@ -11,6 +13,7 @@ robot_name: Leolani
 application_lang: en-GB
 internal_lang: en-GB
 
+# For values see pepper/__init__.py > CameraResolution enum
 cam_resolution: QVGA
 cam_frame_rate: 3
 
@@ -126,7 +129,6 @@ threshold = 0.25
 # NOTE: adding more target is only possible when the backends actually run: see pepper_tensorflow
 # NOTE: running multiple targets at once
 targets: %(obj_recognition_targets)s
-
 
 
 [pepper.framework.component.context]
