Fix configuration of google credentials

--- a/config/default.config
+++ b/config/default.config
@@ -148,3 +148,7 @@ performance_error_threshold: 0.8
 live_speech_timeout: 3
 camera_frame_rate: $(cam_frame_rate)s
 microphone_sample_rate: %(mic_sample_rate)s
+
+
+[environment]
+GOOGLE_APPLICATION_CREDENTIALS: config/google_cloud_key.json
