Fix credentials config and add support for lists in configuration values

--- a/config/default.config
+++ b/config/default.config
@@ -151,4 +151,4 @@ microphone_sample_rate: %(mic_sample_rate)s
 
 
 [environment]
-GOOGLE_APPLICATION_CREDENTIALS: config/google_cloud_key.json
+GOOGLE_APPLICATION_CREDENTIALS: /Users/tkb/automatic/workspaces/robo/leolani/leolani-pepper/google_cloud_key.json
