--- a/test/framework/config/test.config
+++ b/test/framework/config/test.config
@@ -16,6 +16,7 @@ default_val: default
 
 [section]
 name: test section
+values: val_1, val_2
 int: 3
 float: 2.5
 bool: True
@@ -28,4 +29,8 @@ bool_false: false
 bool_no: no
 bool_off: off
 enum: value
+enums: value, other_value
 interpolated: %(default_val)s/%(name)s/%(bool)s
+
+[environment]
+UNIT_TEST_VAR: test environment variable
