Fix config retrieval and interpolation key

--- a/config/default.config
+++ b/config/default.config
@@ -106,7 +106,7 @@ channels: %(mic_channels)s
 # Camera resolution (in pixels) and frame rate (Hz)
 # NOTE: Both resolution and frame rate impact system performance...
 resolution: %(cam_resolution)s
-frame_rate: $(cam_frame_rate)s
+frame_rate: %(cam_frame_rate)s
 
 
 [pepper.framework.component.brain]
@@ -146,7 +146,7 @@ timeout: 15
 [pepper.framework.component.statistics]
 performance_error_threshold: 0.8
 live_speech_timeout: 3
-camera_frame_rate: $(cam_frame_rate)s
+camera_frame_rate: %(cam_frame_rate)s
 microphone_sample_rate: %(mic_sample_rate)s
 
 
