Improve logging messages

--- a/config/logging.config
+++ b/config/logging.config
@@ -8,7 +8,7 @@ keys: console, file
 keys: pepperFormatter
 
 [logger_root]
-level: INFO
+level: DEBUG
 handlers: console, file
 
 [logger_pepper]
@@ -19,16 +19,16 @@ qualname: pepper
 
 [handler_console]
 class: StreamHandler
-level: INFO
+level: NOTSET
 formatter: pepperFormatter
 args: (sys.stdout,)
 
 [handler_file]
 class: FileHandler
-level: INFO
+level: NOTSET
 formatter: pepperFormatter
 args: ('log.txt', 'w')
 
 [formatter_pepperFormatter]
-format: %(asctime)s %(levelname)-8s %(name)-35s %(message)s
+format: %(asctime)s %(levelname)-8s %(name)-60s %(message)s
 datefmt: %x %X
