Various fixes and improvements   * POS resource path   * configuration   * imports   * speech to text language   * deadlock when starting statistics   * docstrings

--- a/config/default.config
+++ b/config/default.config
@@ -28,7 +28,7 @@ obj_recognition_targets: coco, oid
 log_file: log.txt
 
 # People Root
-people_dir: people
+people_dir: %(root_dir)s/people
 # Root of Robot's "friends"
 people_friends_dir: %(people_dir)s/friends
 
@@ -52,7 +52,6 @@ microphone_channels: %(mic_channels)s
 ip: 192.168.1.176  # Default WiFi
 port: 9559
 url: tcp://%(ip)s:%(port)s
-speech_speed = 90
 
 application_language: %(application_lang)s
 internal_language: %(internal_lang)s
@@ -119,7 +118,7 @@ log_dir: %(root_dir)s/backups/brain
 [pepper.framework.component.face]
 threshold: 0.3
 friends_dir: %(people_friends_dir)s
-new_dir: %(root_dir)s/people/new
+new_dir: %(people_new_dir)s
 
 
 [pepper.framework.component.object]
