Convert SpeechRecognitionComponent into a topic worker

--- a/test/app_itest/test.config
+++ b/test/app_itest/test.config
@@ -80,6 +80,7 @@ log_prefix: brain_log_
 
 [pepper.framework.sensors.vad.webrtc]
 microphone_sample_rate: %(mic_sample_rate)s
+microphone_channels: %(mic_channels)s
 
 threshold = 0.6
 
