Convert context component into worker Pt.2, convert ExploreComponent

--- a/config/default.config
+++ b/config/default.config
@@ -135,6 +135,7 @@ targets: %(obj_recognition_targets)s
 name: %(robot_name)s
 friends_dir: %(people_friends_dir)s
 object_recognition_targets: %(obj_recognition_targets)s
+conversation_timeout: 30
 
 
 [pepper.framework.component.subtitles]
