Make system backend default in config

--- a/config/pepper.config
+++ b/config/pepper.config
@@ -1,6 +1,6 @@
 [DEFAULT]
 # Application Backend to Use (SYSTEM or NAOQI)
-backend: naoqi
+backend: system
 
 [pepper.framework.backend.naoqi]
 # NAOqi Robot URL
