Fixed startup of components and event processing in ExplorationComponent

--- a/config/default.config
+++ b/config/default.config
@@ -38,6 +38,10 @@ people_new_dir: %(people_dir)s/new
 # Application Backend to Use (SYSTEM or NAOQI)
 backend: system
 
+# Global
+dependency_timeout = 10
+
+
 [pepper.framework.backend.system]
 application_language: %(application_lang)s
 internal_language: %(internal_lang)s
