--- a/test/app_itest/test.config
+++ b/test/app_itest/test.config
@@ -35,6 +35,9 @@ people_new_dir: %(people_dir)s/new
 # Application Backend to Use (SYSTEM or NAOQI)
 backend: system
 
+# Global
+dependency_timeout = 10
+
 [pepper.framework.backend.system]
 application_language: %(application_lang)s
 internal_language: %(internal_lang)s
