--- a/config/logging.config
+++ b/config/logging.config
@@ -27,7 +27,7 @@ args: (sys.stdout,)
 class: FileHandler
 level: NOTSET
 formatter: pepperFormatter
-args: ('log.txt', 'w')
+args: ('log.txt', 'a')
 
 [formatter_pepperFormatter]
 format: %(asctime)s %(levelname)-8s %(name)-60s %(message)s
